--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment_2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Assignment_2 main.c printBoard.c initializeBoard.c library.h isValidMove.c turnAction.c capture.c)
+add_executable(Assignment_2 main.c printBoard.c initializeBoard.c library.h findValidMoves.c turnAction.c capture.c movesAvailable.c)
